Changes after the api update.

--- a/src/Uniplug/Cinema4D/fuProjectGen/Templates/SolutionFilePt1.tt
+++ b/src/Uniplug/Cinema4D/fuProjectGen/Templates/SolutionFilePt1.tt
@@ -1,11 +1,5 @@
 ﻿<#@ template language="C#" #>
-Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "<#= _name #>", "src\Engine\Examples\\<#= _name #>\\<#= _name #>.csproj", "<#= _guid #>"
+Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "<#= _name #>", "projects\\<#= _name #>\\<#= _name #>.csproj", "<#= _guid #>"
 	ProjectSection(ProjectDependencies) = postProject
-		{32D5C521-6CC4-4DCF-BFA1-199043E938DC} = {32D5C521-6CC4-4DCF-BFA1-199043E938DC}
-		{4A183140-3153-4F7E-A692-F4E3EF2CFA0A} = {4A183140-3153-4F7E-A692-F4E3EF2CFA0A}
-		{7E796695-4174-471A-BBE8-3CAF39904588} = {7E796695-4174-471A-BBE8-3CAF39904588}
-		{F7AD2BB5-D2B0-4697-BDDB-4CC26152A6B6} = {F7AD2BB5-D2B0-4697-BDDB-4CC26152A6B6}
-		{0A06B3EA-5934-4373-854A-B4D6E7E1FE16} = {0A06B3EA-5934-4373-854A-B4D6E7E1FE16}
-		{81B3A7F0-F8E4-45D0-BE69-B869C9B1803E} = {81B3A7F0-F8E4-45D0-BE69-B869C9B1803E}
 	EndProjectSection
 EndProject
