Started to exclude the fusExport so i can use it in my project, too.

--- a/src/Uniplug/Cinema4D/FuseeExport/ManifestFile.tt
+++ b/src/Uniplug/Cinema4D/FuseeExport/ManifestFile.tt
@@ -10,8 +10,7 @@ var $customSysSec = JSIL.GetAssembly("System.Security");
 
 if (typeof (contentManifest) !== "object") { contentManifest = {}; };
 contentManifest["<#= _projName #>.contentproj"] = [
-    <# for (int i = 0; i < _fileCount; i++)
-       { #>
-["<#= _fileTypes[i] #>",	"<#= _fileNames[i] #>",	{<#= _fileFormats[i] #> "sizeBytes": <#= _fileSize[i] #> }],
+    <# for (int i = 0; i < _fileCount; i++) { #>
+			["<#= _fileTypes[i] #>",	"<#= _fileNames[i] #>",	{<#= _fileFormats[i] #> "sizeBytes": <#= _fileSize[i] #> }],
     <# } #>
 ];
